Kubernetes/configuration/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app:  httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app:  httpd
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:           
          - containerPort: 8080                     
---
apiVersion: v1 
kind: Service
metadata: 
  name: httpd-service
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
