Kubernetes/configuration/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app:  mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app:  mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:           
          - containerPort: 3306        
---
apiVersion: v1 
kind: Service
metadata: 
  name: mysql-service
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30035
