Kubernetes/configuration/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app:  my-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app:  my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:           
          - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-service
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30038
