Kubernetes/configuration/kubernetes-dashboard-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: kdashboard.com
  http:
    paths:
    - backend:
        serviceName: kubernetes-dashboard
        servicePort: 80
